logs/variantannotation.log
Listing '.'...
Listing './bin'...
Compiling './bin/vcf_filter.py'...
Compiling './bin/vcf_sample_filter.py'...
***   File "./bin/vcf_sample_filter.py", line 37
    print "Samples:"
                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyVCF-0.6.8.egg-info'...
Listing './lib/python3.5/site-packages/bson'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/gridfs'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/myvariant'...
Listing './lib/python3.5/site-packages/myvariant-0.3.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pymongo'...
Listing './lib/python3.5/site-packages/pymongo-3.6.0.dist-info'...
Listing './lib/python3.5/site-packages/pysam'...
Listing './lib/python3.5/site-packages/pysam/include'...
Listing './lib/python3.5/site-packages/pysam/include/bcftools'...
Listing './lib/python3.5/site-packages/pysam/include/htslib'...
Listing './lib/python3.5/site-packages/pysam/include/htslib/htslib'...
Listing './lib/python3.5/site-packages/pysam/include/samtools'...
Listing './lib/python3.5/site-packages/pysam/include/samtools/win32'...
Listing './lib/python3.5/site-packages/pysam-0.13.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/variantannotation'...
Compiling './lib/python3.5/site-packages/variantannotation/MongoDB_querying.py'...
***   File "./lib/python3.5/site-packages/variantannotation/MongoDB_querying.py", line 35
    print 'Variants found that match rarity criteria: {}'.format(len(filtered))
                                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/variantannotation/annotate_batch.py'...
***   File "./lib/python3.5/site-packages/variantannotation/annotate_batch.py", line 61
    print 'Collection name not provided, setting it to "New_Collection"'
                                                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/variantannotation/filtering_MongoDB_TEST.py'...
***   File "./lib/python3.5/site-packages/variantannotation/filtering_MongoDB_TEST.py", line 12
    print l_of_variant_lists
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/variantannotation/utilities.py'...
***   File "./lib/python3.5/site-packages/variantannotation/utilities.py", line 128
    print 'Joining lists ...'
                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/variantannotation-1.1.egg-info'...
Listing './lib/python3.5/site-packages/vcf'...
Listing './lib/python3.5/site-packages/vcf/test'...
Listing './share'...
Listing './share/python-wheels'...
